2008-05-06  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-06
	* allow for configurations to be saved even if unset tracked
	parameters are in it.

2008-05-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-23-05
	* add converter.summary.data
	* implement converter.summary.ascii

2008-04-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-04
	* changed my mind; use HLT DEVELOPMENT for the tutorial, Define
	TEST2R & TEST9R
	
2008-04-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-03
	* add db connection for TUTORIALS DB (int9r)
	
2008-04-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-02
	* fix to diff

2008-04-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-01
	* gui: bug fix for problem reported by Martin regarding import of
	pre-existing modules: didn't work for modules referenced more than
	once.

2008-04-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-23-00
	* gui: add menu 'Tools'
	* gui: add editor for prescale table
	
2008-04-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-15
	* db: bug fix to 'insertConfiguration' regarding global psets

2008-04-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-14
	* converter: fix to block syntax (Ulf)

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-13
	* diff: fix to initDatabase()

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-12
	* converter: fix to BrowserConverter

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-11
	* point to new HLT Development DB at CMSR
	(src/conf/conf.properties)

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-10
	* parser: fixes
	* data: add Block, add --blocks parameter for
	ConfigurationModifier